testsuite/synth/issue1428/arr01.ref
arr01.vhdl:11:10:error: multiple assignments for "s" offsets 1:1
arr01.vhdl:11:10:note:  this concerns these parts of the signal:
arr01.vhdl:11:10:note:   s(??)
